# omnis-control

./: .env.example  .gitignore  AGENTS.md  AUDITORIA_ONDA_0.md  AVALIACAO_ESTRUTURAL.md  BLUEPRINT.md  CLAUDE.md  EVOLUCAO_LOG.md  HANDOFF_AURORA_AKASHA.md  HANDOFF_AURORA_CONTEXT_ENGINE.md  HANDOFF_AURORA_NOTION.md  HANDOFF_AURORA_PANEL.md  HANDOFF_BLOCO2_WAVES8_9_10.md  HANDOFF_BLOCO_A1_B1_B4.md  HANDOFF_CAMADA1_SEGURANCA.md  HANDOFF_D1_COMPLETO.md  HANDOFF_D1_SCAFFOLD.md  HANDOFF_GIGANTE_5WAVES.md  HANDOFF_OPUSPLAN_FILA.md  HANDOFF_TEST_HANG_REAUDIT.md  HANDOFF_W10_HEALTH.md  HANDOFF_W11_MARKETING.md  HANDOFF_W11_W20_COMPLETO.md  HANDOFF_W12_LITELLM.md  HANDOFF_W13_QDRANT.md  HANDOFF_W14_API.md  HANDOFF_W15_N8N.md  HANDOFF_W16_SQUADS.md  HANDOFF_W17_OBSIDIAN.md  HANDOFF_W18_KRATOS_BRIDGE.md  HANDOFF_W1_NODES.md  HANDOFF_W2_CHECKPOINT.md  HANDOFF_W3_RETRY.md  HANDOFF_W4_PLAN.md  HANDOFF_W5_AURORA.md  HANDOFF_W6_STATE_JSON.md  HANDOFF_W7_E2E.md  HANDOFF_W8_GUARDRAIL.md  HANDOFF_W9_COST.md  HANDOFF_WAVE1.md  (+26 more)
.claude/: settings.json
.githooks/: pre-commit
cockpit/: approvals.html  backlog.html  carousel_preview.html  index.html  mission-detail.html  mission.html  missions.html  missions_data.js  ops_data.js  outputs.html  outputs_data.js  quality.html  runs.html  search.html  styles.css  system.html  templates.html
config/: capabilities.yaml  connectors.example.yaml  connectors.yaml  intents.yaml  meta_accounts.example.yaml  output_generators.yaml  paths.yaml  roles.yaml  sectors.yaml  sectors_registry.yaml
core/: __init__.py
data/: caption_templates.json
docs/: AGENTIC_ARCHITECTURE_AND_ROADMAP.md  ARQUITETURA.md  AURORA_GAP_ANALYSIS.md  AUTOMATION_INTEGRATIONS.md  AUTONOMOUS_OPS_REPORT.md  CAPTION_APPROVAL.md  CCOS_BOOTSTRAP_VALIDATION_REPORT.md  (+148 more)
(+2745 files in other folders)
