[project]
name = "omnis-control"
version = "0.1.0"
description = "Cabine mínima de controle do ecossistema OMNIS/Jarvis"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "docker>=7.0.0",
    "qdrant-client>=1.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
omnis = "src.cli:app"
jarvis = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
